--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html {
 
 h2 {
  color: #3F3B6C;
+ margin-top: 40px;
 }
 
 header h2 {
@@ -95,6 +96,7 @@ a:hover {
   display: flex;
   padding: 25px;
   gap: 50px;
+  background-color: #E8E8E8;
 }
 
 /* LaunchCode Test */
